# mini-llvm

./: .bazelrc  .clang-tidy  .editorconfig  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md
.devcontainer/gcc/: Dockerfile  devcontainer.json
.devcontainer/llvm/: Dockerfile  configure_clang.sh  devcontainer.json
.github/workflows/: build-mips64-linux.yml  build.yml  check.yml  docs.yml
cmake/: mini-llvm-config.cmake.in
contrib/: check-all.sh  check.py  cmake-format.py  cmake_format.py  format-all-staged.sh  format-all.sh  format-staged.sh  format.py  format_all.sh  format_staged.sh  glob.sh  pre-commit.sh  pre-push.sh  pre_commit.sh  setup-hooks.sh  setup_hooks.sh  sources-staged.sh  staged-sources.sh
fuzz/: BUILD.bazel  CMakeLists.txt  fuzz.cpp
lib/: CMakeLists.txt
lib/codegen/register_allocator/: LinearScanAllocator.cpp  NaiveAllocator.cpp
lib/codegen/register_allocators/: GraphColoringAllocator.cpp  LinearScanAllocator.cpp  NaiveAllocator.cpp
lib/common/: SourceManager.cpp
lib/ir/: Argument.cpp  BasicBlock.cpp  Function.cpp  GlobalValue.cpp  GlobalVar.cpp  Instruction.cpp  Module.cpp  Use.cpp  Value.cpp  Verifier.cpp  Verify.cpp
lib/ir/Constant/: ArrayConstant.cpp
lib/ir/Instruction/: Alloca.cpp  BinaryFloatingArithmeticOperators.cpp  BinaryFloatingOperator.cpp  BinaryFloatingRelationalOperators.cpp  BinaryIntegerArithmeticOperator.cpp  BinaryIntegerArithmeticOperators.cpp  BinaryIntegerOperator.cpp  BinaryIntegerRelationalOperators.cpp  BitCast.cpp  Br.cpp  Call.cpp  CondBr.cpp  FloatingCastingOperator.cpp  FloatingCastingOperators.cpp  FloatingToIntegerCastingOperator.cpp  FloatingToIntegerCastingOperators.cpp  GetElementPtr.cpp  IndirectCall.cpp  IntToPtr.cpp  IntegerCastingOperator.cpp  IntegerCastingOperators.cpp  IntegerToFloatingCastingOperator.cpp  IntegerToFloatingCastingOperators.cpp  Load.cpp  Phi.cpp  PtrToInt.cpp  Ret.cpp  Select.cpp  Store.cpp  UnaryFloatingArithmeticOperators.cpp  UnaryFloatingOperator.cpp
lib/ir/Type/: ArrayType.cpp  Double.cpp  Float.cpp  FunctionType.cpp  I1.cpp  I16.cpp  I32.cpp  I64.cpp  I8.cpp  Ptr.cpp  Void.cpp
lib/ir_parser/: IRParser.cpp  Lexer.cpp  Parser.cpp
lib/ir_reader/: IRReader.cpp  Lexer.cpp  Parser.cpp
lib/mc/: Address.cpp  Fragment.cpp  GlobalValue.cpp  Instruction.cpp  Module.cpp  Program.cpp  StringDirective.cpp  Symbol.cpp
lib/mir/: BasicBlock.cpp  Function.cpp  GlobalValue.cpp  GlobalVar.cpp  Instruction.cpp  Module.cpp  PhysicalRegister.cpp  StackFrame.cpp  StackSlot.cpp  VirtualRegister.cpp
lib/mir/Constant/: I16ArrayConstant.cpp  I32ArrayConstant.cpp  I64ArrayConstant.cpp  I8ArrayConstant.cpp  PtrArrayConstant.cpp  PtrConstant.cpp
lib/mir/Instruction/: BinaryOperator.cpp  BinaryOperatorI.cpp  Load.cpp  Terminator.cpp  UnaryOperator.cpp
lib/opt/ir/: FunctionTransform.cpp  PassManager.cpp
lib/opt/ir/passes/: AlgebraicSimplification.cpp  AliasAnalysis.cpp  ArrayFlattening.cpp  AttributeDeduction.cpp  BasicBlockMerging.cpp  BranchSimplification.cpp  ConstantFolding.cpp  DeadCodeElimination.cpp  DeadStoreElimination.cpp  DominatorTreeAnalysis.cpp  FunctionInlining.cpp  GlobalCodeMotion.cpp  GlobalDeadCodeElimination.cpp  GlobalValueNumbering.cpp  InstructionCombining.cpp  JumpThreading.cpp  LoopTreeAnalysis.cpp  Mem2Reg.cpp  PoisonPropagation.cpp  RedundantLoadElimination.cpp  StrengthReduction.cpp  TailCallElimination.cpp  TailDuplication.cpp  UnreachableBlockElimination.cpp  VerificationAnalysis.cpp
lib/opt/mc/: GlobalValueTransform.cpp
lib/opt/mc/passes/: RedundantLabelElimination.cpp  UnusedLabelElimination.cpp
lib/opt/mir/: BasicBlockTransform.cpp  FunctionTransform.cpp
lib/opt/mir/passes/: BasicBlockMerging.cpp  BasicBlockReordering.cpp  BranchPredictionAnalysis.cpp  ConstantPropagation.cpp  ConstantReuse.cpp  CopyPropagation.cpp  DeadCodeElimination.cpp  IdentityMoveElimination.cpp  JumpThreading.cpp  LiveVariableAnalysis.cpp  NullOperationElimination.cpp  RegisterReuse.cpp  StackOffsetEvaluation.cpp  TailDuplication.cpp  UnreachableBlockElimination.cpp  ZeroRegisterReplacement.cpp
lib/targets/riscv/: RISCVBackendDriver.cpp
lib/targets/riscv/codegen/: RISCVMCGen.cpp  RISCVMIRGen.cpp
lib/targets/riscv/mc/: RISCVAddress.cpp  RISCVDataDirective.cpp  RISCVInstruction.cpp
lib/targets/riscv/mir/: RISCVRegister.cpp
lib/targets/riscv/mir/Instruction/: RISCVCall.cpp  RISCVJALR.cpp  RISCVRet.cpp
lib/targets/riscv/opt/mc/: RISCVPassManager.cpp
lib/targets/riscv/opt/mc/passes/: RISCVFallthrough.cpp  RISCVUnusedLabelElimination.cpp
lib/targets/riscv/opt/mir/: RISCVPassManager.cpp
lib/targets/riscv/opt/mir/passes/: RISCVConstantPropagation.cpp
lib/utils/: ASCII.cpp  BigInteger.cpp  Chars.cpp  Color.cpp  Colors.cpp  CommandLineParser.cpp  Dot.cpp  FileHandle.cpp  FileSystem.cpp  IO.cpp  Lines.cpp  ScopedFileHandle.cpp  Strings.cpp  SystemError.cpp  Unicode.cpp  Windows.cpp
scripts/: clang_tidy.py  clang_tidy_all.sh  clang_tidy_staged.sh  format.py  format_all.sh  format_staged.sh  pre_commit.sh  pre_push.sh  setup_hooks.sh
tools/mini-llc/: BUILD.bazel  CMakeLists.txt  main.cpp
unittests/: .clang-tidy  BUILD.bazel  CMakeLists.txt  main.cpp
unittests/ir/: BasicBlockTest.cpp  FunctionTest.cpp
unittests/ir/Constant/: ArrayConstantTest.cpp
unittests/ir/Instruction/: ASHRTest.cpp  AddTest.cpp  AllocaTest.cpp  AndTest.cpp  BrTest.cpp  CondBrTest.cpp  FAddTest.cpp  FCmpTest.cpp  FDivTest.cpp  FMulTest.cpp  FNegTest.cpp  FPExtTest.cpp  FPTruncTest.cpp  FRemTest.cpp  FSubTest.cpp  GetElementPtrTest.cpp  ICmpTest.cpp  LSHRTest.cpp  LoadTest.cpp  MulTest.cpp  OrTest.cpp  PhiTest.cpp  RetTest.cpp  SDivTest.cpp  SExtTest.cpp  SHLTest.cpp  SRemTest.cpp  SelectTest.cpp  StoreTest.cpp  SubTest.cpp  TruncTest.cpp  UDivTest.cpp  URemTest.cpp  XorTest.cpp  ZExtTest.cpp
unittests/ir_reader/: IRReaderTest.cpp  LexerTest.cpp  ParserTest.cpp
unittests/utils/: AsciiTest.cpp  BigIntegerTest.cpp  CommandLineParserTest.cpp  PCG32Test.cpp  SequenceOpsTest.cpp  SetOpsTest.cpp  StringJoinerTest.cpp  StringsTest.cpp  UnicodeTest.cpp
(+659 files in other folders)
