load("@rules_cc//cc:cc_library.bzl", "cc_library")

config_setting(
    name = "shared",
    values = {
        "define": "shared=true",
    },
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "mini-llvm",
    srcs = [
        "lib/codegen/register_allocators/GraphColoringAllocator.cpp",
        "lib/codegen/register_allocators/LinearScanAllocator.cpp",
        "lib/codegen/register_allocators/NaiveAllocator.cpp",
        "lib/common/SourceManager.cpp",
        "lib/ir/BasicBlock.cpp",
        "lib/ir/Constant/ArrayConstant.cpp",
        "lib/ir/Function.cpp",
        "lib/ir/GlobalVar.cpp",
        "lib/ir/Instruction.cpp",
        "lib/ir/Instruction/Alloca.cpp",
        "lib/ir/Instruction/BinaryFloatingArithmeticOperators.cpp",
        "lib/ir/Instruction/BinaryFloatingOperator.cpp",
        "lib/ir/Instruction/BinaryFloatingRelationalOperators.cpp",
        "lib/ir/Instruction/BinaryIntegerArithmeticOperator.cpp",
        "lib/ir/Instruction/BinaryIntegerArithmeticOperators.cpp",
        "lib/ir/Instruction/BinaryIntegerOperator.cpp",
        "lib/ir/Instruction/BinaryIntegerRelationalOperators.cpp",
        "lib/ir/Instruction/BitCast.cpp",
        "lib/ir/Instruction/Br.cpp",
        "lib/ir/Instruction/Call.cpp",
        "lib/ir/Instruction/CondBr.cpp",
        "lib/ir/Instruction/FloatingCastingOperator.cpp",
        "lib/ir/Instruction/FloatingCastingOperators.cpp",
        "lib/ir/Instruction/FloatingToIntegerCastingOperator.cpp",
        "lib/ir/Instruction/FloatingToIntegerCastingOperators.cpp",
        "lib/ir/Instruction/GetElementPtr.cpp",
        "lib/ir/Instruction/IndirectCall.cpp",
        "lib/ir/Instruction/IntToPtr.cpp",
        "lib/ir/Instruction/IntegerCastingOperator.cpp",
        "lib/ir/Instruction/IntegerCastingOperators.cpp",
        "lib/ir/Instruction/IntegerToFloatingCastingOperator.cpp",
        "lib/ir/Instruction/IntegerToFloatingCastingOperators.cpp",
        "lib/ir/Instruction/Load.cpp",
        "lib/ir/Instruction/Phi.cpp",
        "lib/ir/Instruction/PtrToInt.cpp",
        "lib/ir/Instruction/Ret.cpp",
        "lib/ir/Instruction/Select.cpp",
        "lib/ir/Instruction/Store.cpp",
        "lib/ir/Instruction/UnaryFloatingArithmeticOperators.cpp",
        "lib/ir/Instruction/UnaryFloatingOperator.cpp",
        "lib/ir/Module.cpp",
        "lib/ir/Type/ArrayType.cpp",
        "lib/ir/Type/Double.cpp",
        "lib/ir/Type/Float.cpp",
        "lib/ir/Type/FunctionType.cpp",
        "lib/ir/Type/I1.cpp",
        "lib/ir/Type/I16.cpp",
        "lib/ir/Type/I32.cpp",
        "lib/ir/Type/I64.cpp",
        "lib/ir/Type/I8.cpp",
        "lib/ir/Type/Ptr.cpp",
        "lib/ir/Type/Void.cpp",
        "lib/ir/Use.cpp",
        "lib/ir/Value.cpp",
        "lib/ir_reader/IRReader.cpp",
        "lib/ir_reader/Lexer.cpp",
        "lib/ir_reader/Parser.cpp",
        "lib/mc/GlobalValue.cpp",
        "lib/mc/Module.cpp",
        "lib/mc/StringDirective.cpp",
        "lib/mc/Symbol.cpp",
        "lib/mir/BasicBlock.cpp",
        "lib/mir/Constant/I16ArrayConstant.cpp",
        "lib/mir/Constant/I32ArrayConstant.cpp",
        "lib/mir/Constant/I64ArrayConstant.cpp",
        "lib/mir/Constant/I8ArrayConstant.cpp",
        "lib/mir/Constant/PtrArrayConstant.cpp",
        "lib/mir/Constant/PtrConstant.cpp",
        "lib/mir/Function.cpp",
        "lib/mir/GlobalValue.cpp",
        "lib/mir/GlobalVar.cpp",
        "lib/mir/Instruction.cpp",
        "lib/mir/Instruction/BinaryOperator.cpp",
        "lib/mir/Instruction/BinaryOperatorI.cpp",
        "lib/mir/Instruction/Load.cpp",
        "lib/mir/Instruction/Terminator.cpp",
        "lib/mir/Instruction/UnaryOperator.cpp",
        "lib/mir/Module.cpp",
        "lib/mir/StackFrame.cpp",
        "lib/mir/StackSlot.cpp",
        "lib/mir/VirtualRegister.cpp",
        "lib/opt/ir/FunctionTransform.cpp",
        "lib/opt/ir/PassManager.cpp",
        "lib/opt/ir/passes/AlgebraicSimplification.cpp",
        "lib/opt/ir/passes/AliasAnalysis.cpp",
        "lib/opt/ir/passes/ArrayFlattening.cpp",
        "lib/opt/ir/passes/AttributeDeduction.cpp",
        "lib/opt/ir/passes/BasicBlockMerging.cpp",
        "lib/opt/ir/passes/BranchSimplification.cpp",
        "lib/opt/ir/passes/ConstantFolding.cpp",
        "lib/opt/ir/passes/DeadCodeElimination.cpp",
        "lib/opt/ir/passes/DeadStoreElimination.cpp",
        "lib/opt/ir/passes/DominatorTreeAnalysis.cpp",
        "lib/opt/ir/passes/FunctionInlining.cpp",
        "lib/opt/ir/passes/GlobalCodeMotion.cpp",
        "lib/opt/ir/passes/GlobalDeadCodeElimination.cpp",
        "lib/opt/ir/passes/GlobalValueNumbering.cpp",
        "lib/opt/ir/passes/InstructionCombining.cpp",
        "lib/opt/ir/passes/JumpThreading.cpp",
        "lib/opt/ir/passes/LoopTreeAnalysis.cpp",
        "lib/opt/ir/passes/Mem2Reg.cpp",
        "lib/opt/ir/passes/PoisonPropagation.cpp",
        "lib/opt/ir/passes/RedundantLoadElimination.cpp",
        "lib/opt/ir/passes/StrengthReduction.cpp",
        "lib/opt/ir/passes/TailCallElimination.cpp",
        "lib/opt/ir/passes/TailDuplication.cpp",
        "lib/opt/ir/passes/UnreachableBlockElimination.cpp",
        "lib/opt/mc/GlobalValueTransform.cpp",
        "lib/opt/mir/BasicBlockTransform.cpp",
        "lib/opt/mir/FunctionTransform.cpp",
        "lib/opt/mir/passes/BasicBlockMerging.cpp",
        "lib/opt/mir/passes/BasicBlockReordering.cpp",
        "lib/opt/mir/passes/BranchPredictionAnalysis.cpp",
        "lib/opt/mir/passes/CopyPropagation.cpp",
        "lib/opt/mir/passes/DeadCodeElimination.cpp",
        "lib/opt/mir/passes/JumpThreading.cpp",
        "lib/opt/mir/passes/LiveVariableAnalysis.cpp",
        "lib/opt/mir/passes/NullOperationElimination.cpp",
        "lib/opt/mir/passes/RegisterReuse.cpp",
        "lib/opt/mir/passes/StackOffsetEvaluation.cpp",
        "lib/opt/mir/passes/TailDuplication.cpp",
        "lib/opt/mir/passes/UnreachableBlockElimination.cpp",
        "lib/opt/mir/passes/ZeroRegisterReplacement.cpp",
        "lib/targets/riscv/RISCVBackendDriver.cpp",
        "lib/targets/riscv/codegen/RISCVMCGen.cpp",
        "lib/targets/riscv/codegen/RISCVMIRGen.cpp",
        "lib/targets/riscv/mc/RISCVAddress.cpp",
        "lib/targets/riscv/mc/RISCVDataDirective.cpp",
        "lib/targets/riscv/mc/RISCVInstruction.cpp",
        "lib/targets/riscv/mir/Instruction/RISCVCall.cpp",
        "lib/targets/riscv/mir/Instruction/RISCVJALR.cpp",
        "lib/targets/riscv/mir/Instruction/RISCVRet.cpp",
        "lib/targets/riscv/mir/RISCVRegister.cpp",
        "lib/targets/riscv/opt/mc/RISCVPassManager.cpp",
        "lib/targets/riscv/opt/mc/passes/RISCVFallthrough.cpp",
        "lib/targets/riscv/opt/mc/passes/RISCVUnusedLabelElimination.cpp",
        "lib/targets/riscv/opt/mir/RISCVPassManager.cpp",
        "lib/targets/riscv/opt/mir/passes/RISCVConstantPropagation.cpp",
        "lib/utils/BigInteger.cpp",
        "lib/utils/CommandLineParser.cpp",
        "lib/utils/Dot.cpp",
        "lib/utils/FileHandle.cpp",
        "lib/utils/IO.cpp",
        "lib/utils/Strings.cpp",
        "lib/utils/SystemError.cpp",
        "lib/utils/Unicode.cpp",
        "lib/utils/Windows.cpp",
    ],
    hdrs = [
        "include/mini-llvm/codegen/RegisterAllocator.h",
        "include/mini-llvm/codegen/register_allocators/GraphColoringAllocator.h",
        "include/mini-llvm/codegen/register_allocators/LinearScanAllocator.h",
        "include/mini-llvm/codegen/register_allocators/NaiveAllocator.h",
        "include/mini-llvm/common/Diagnostic.h",
        "include/mini-llvm/common/ExtensionMode.h",
        "include/mini-llvm/common/Linkage.h",
        "include/mini-llvm/common/Precision.h",
        "include/mini-llvm/common/SourceManager.h",
        "include/mini-llvm/common/ops/ASHR.h",
        "include/mini-llvm/common/ops/Add.h",
        "include/mini-llvm/common/ops/And.h",
        "include/mini-llvm/common/ops/BitCast.h",
        "include/mini-llvm/common/ops/EQ.h",
        "include/mini-llvm/common/ops/FAdd.h",
        "include/mini-llvm/common/ops/FDiv.h",
        "include/mini-llvm/common/ops/FMul.h",
        "include/mini-llvm/common/ops/FNeg.h",
        "include/mini-llvm/common/ops/FPExt.h",
        "include/mini-llvm/common/ops/FPToSI.h",
        "include/mini-llvm/common/ops/FPToUI.h",
        "include/mini-llvm/common/ops/FPTrunc.h",
        "include/mini-llvm/common/ops/FRem.h",
        "include/mini-llvm/common/ops/FSub.h",
        "include/mini-llvm/common/ops/LSHR.h",
        "include/mini-llvm/common/ops/Mul.h",
        "include/mini-llvm/common/ops/NE.h",
        "include/mini-llvm/common/ops/OEQ.h",
        "include/mini-llvm/common/ops/OGE.h",
        "include/mini-llvm/common/ops/OGT.h",
        "include/mini-llvm/common/ops/OLE.h",
        "include/mini-llvm/common/ops/OLT.h",
        "include/mini-llvm/common/ops/ONE.h",
        "include/mini-llvm/common/ops/Or.h",
        "include/mini-llvm/common/ops/SDiv.h",
        "include/mini-llvm/common/ops/SExt.h",
        "include/mini-llvm/common/ops/SGE.h",
        "include/mini-llvm/common/ops/SGT.h",
        "include/mini-llvm/common/ops/SHL.h",
        "include/mini-llvm/common/ops/SIToFP.h",
        "include/mini-llvm/common/ops/SLE.h",
        "include/mini-llvm/common/ops/SLT.h",
        "include/mini-llvm/common/ops/SRem.h",
        "include/mini-llvm/common/ops/Sub.h",
        "include/mini-llvm/common/ops/Trunc.h",
        "include/mini-llvm/common/ops/UDiv.h",
        "include/mini-llvm/common/ops/UGE.h",
        "include/mini-llvm/common/ops/UGT.h",
        "include/mini-llvm/common/ops/UIToFP.h",
        "include/mini-llvm/common/ops/ULE.h",
        "include/mini-llvm/common/ops/ULT.h",
        "include/mini-llvm/common/ops/URem.h",
        "include/mini-llvm/common/ops/Xor.h",
        "include/mini-llvm/common/ops/ZExt.h",
        "include/mini-llvm/ir/Argument.h",
        "include/mini-llvm/ir/Attribute.h",
        "include/mini-llvm/ir/Attribute/AlwaysInline.h",
        "include/mini-llvm/ir/Attribute/ArgMemOnly.h",
        "include/mini-llvm/ir/Attribute/InaccessibleMemOnly.h",
        "include/mini-llvm/ir/Attribute/InaccessibleMemOrArgMemOnly.h",
        "include/mini-llvm/ir/Attribute/NoInline.h",
        "include/mini-llvm/ir/Attribute/ReadNone.h",
        "include/mini-llvm/ir/Attribute/ReadOnly.h",
        "include/mini-llvm/ir/BasicBlock.h",
        "include/mini-llvm/ir/Constant.h",
        "include/mini-llvm/ir/Constant/ArrayConstant.h",
        "include/mini-llvm/ir/Constant/DoubleConstant.h",
        "include/mini-llvm/ir/Constant/FloatConstant.h",
        "include/mini-llvm/ir/Constant/FloatingConstant.h",
        "include/mini-llvm/ir/Constant/I16Constant.h",
        "include/mini-llvm/ir/Constant/I1Constant.h",
        "include/mini-llvm/ir/Constant/I32Constant.h",
        "include/mini-llvm/ir/Constant/I64Constant.h",
        "include/mini-llvm/ir/Constant/I8Constant.h",
        "include/mini-llvm/ir/Constant/IntegerConstant.h",
        "include/mini-llvm/ir/Constant/NullPtrConstant.h",
        "include/mini-llvm/ir/Constant/PointerConstant.h",
        "include/mini-llvm/ir/Constant/PoisonValue.h",
        "include/mini-llvm/ir/Constant/VoidValue.h",
        "include/mini-llvm/ir/ConstantVisitor.h",
        "include/mini-llvm/ir/Function.h",
        "include/mini-llvm/ir/GlobalValue.h",
        "include/mini-llvm/ir/GlobalVar.h",
        "include/mini-llvm/ir/Instruction.h",
        "include/mini-llvm/ir/Instruction/ASHR.h",
        "include/mini-llvm/ir/Instruction/Add.h",
        "include/mini-llvm/ir/Instruction/Alloca.h",
        "include/mini-llvm/ir/Instruction/And.h",
        "include/mini-llvm/ir/Instruction/BinaryFloatingArithmeticOperator.h",
        "include/mini-llvm/ir/Instruction/BinaryFloatingOperator.h",
        "include/mini-llvm/ir/Instruction/BinaryFloatingRelationalOperator.h",
        "include/mini-llvm/ir/Instruction/BinaryIntegerArithmeticOperator.h",
        "include/mini-llvm/ir/Instruction/BinaryIntegerOperator.h",
        "include/mini-llvm/ir/Instruction/BinaryIntegerRelationalOperator.h",
        "include/mini-llvm/ir/Instruction/BitCast.h",
        "include/mini-llvm/ir/Instruction/Br.h",
        "include/mini-llvm/ir/Instruction/Call.h",
        "include/mini-llvm/ir/Instruction/CondBr.h",
        "include/mini-llvm/ir/Instruction/FAdd.h",
        "include/mini-llvm/ir/Instruction/FCmp.h",
        "include/mini-llvm/ir/Instruction/FDiv.h",
        "include/mini-llvm/ir/Instruction/FMul.h",
        "include/mini-llvm/ir/Instruction/FNeg.h",
        "include/mini-llvm/ir/Instruction/FPExt.h",
        "include/mini-llvm/ir/Instruction/FPToSI.h",
        "include/mini-llvm/ir/Instruction/FPToUI.h",
        "include/mini-llvm/ir/Instruction/FPTrunc.h",
        "include/mini-llvm/ir/Instruction/FRem.h",
        "include/mini-llvm/ir/Instruction/FSub.h",
        "include/mini-llvm/ir/Instruction/FloatingCastingOperator.h",
        "include/mini-llvm/ir/Instruction/FloatingToIntegerCastingOperator.h",
        "include/mini-llvm/ir/Instruction/GetElementPtr.h",
        "include/mini-llvm/ir/Instruction/ICmp.h",
        "include/mini-llvm/ir/Instruction/IndirectCall.h",
        "include/mini-llvm/ir/Instruction/IntToPtr.h",
        "include/mini-llvm/ir/Instruction/IntegerCastingOperator.h",
        "include/mini-llvm/ir/Instruction/IntegerToFloatingCastingOperator.h",
        "include/mini-llvm/ir/Instruction/LSHR.h",
        "include/mini-llvm/ir/Instruction/Load.h",
        "include/mini-llvm/ir/Instruction/Mul.h",
        "include/mini-llvm/ir/Instruction/Or.h",
        "include/mini-llvm/ir/Instruction/Phi.h",
        "include/mini-llvm/ir/Instruction/PtrToInt.h",
        "include/mini-llvm/ir/Instruction/Ret.h",
        "include/mini-llvm/ir/Instruction/SDiv.h",
        "include/mini-llvm/ir/Instruction/SExt.h",
        "include/mini-llvm/ir/Instruction/SHL.h",
        "include/mini-llvm/ir/Instruction/SIToFP.h",
        "include/mini-llvm/ir/Instruction/SRem.h",
        "include/mini-llvm/ir/Instruction/Select.h",
        "include/mini-llvm/ir/Instruction/Store.h",
        "include/mini-llvm/ir/Instruction/Sub.h",
        "include/mini-llvm/ir/Instruction/Terminator.h",
        "include/mini-llvm/ir/Instruction/Trunc.h",
        "include/mini-llvm/ir/Instruction/UDiv.h",
        "include/mini-llvm/ir/Instruction/UIToFP.h",
        "include/mini-llvm/ir/Instruction/URem.h",
        "include/mini-llvm/ir/Instruction/UnaryFloatingArithmeticOperator.h",
        "include/mini-llvm/ir/Instruction/UnaryFloatingOperator.h",
        "include/mini-llvm/ir/Instruction/Xor.h",
        "include/mini-llvm/ir/Instruction/ZExt.h",
        "include/mini-llvm/ir/InstructionVisitor.h",
        "include/mini-llvm/ir/Module.h",
        "include/mini-llvm/ir/Type.h",
        "include/mini-llvm/ir/Type/ArrayType.h",
        "include/mini-llvm/ir/Type/BasicBlockType.h",
        "include/mini-llvm/ir/Type/Double.h",
        "include/mini-llvm/ir/Type/Float.h",
        "include/mini-llvm/ir/Type/FloatingType.h",
        "include/mini-llvm/ir/Type/FunctionType.h",
        "include/mini-llvm/ir/Type/I1.h",
        "include/mini-llvm/ir/Type/I16.h",
        "include/mini-llvm/ir/Type/I32.h",
        "include/mini-llvm/ir/Type/I64.h",
        "include/mini-llvm/ir/Type/I8.h",
        "include/mini-llvm/ir/Type/IntegerOrPointerType.h",
        "include/mini-llvm/ir/Type/IntegerType.h",
        "include/mini-llvm/ir/Type/Ptr.h",
        "include/mini-llvm/ir/Type/Void.h",
        "include/mini-llvm/ir/TypeVisitor.h",
        "include/mini-llvm/ir/Use.h",
        "include/mini-llvm/ir/Value.h",
        "include/mini-llvm/ir_reader/IRReader.h",
        "include/mini-llvm/ir_reader/Lexer.h",
        "include/mini-llvm/ir_reader/Parser.h",
        "include/mini-llvm/ir_reader/Symbol.h",
        "include/mini-llvm/ir_reader/Token.h",
        "include/mini-llvm/mc/Directive.h",
        "include/mini-llvm/mc/GlobalValue.h",
        "include/mini-llvm/mc/GlobalValueBuilder.h",
        "include/mini-llvm/mc/Instruction.h",
        "include/mini-llvm/mc/Label.h",
        "include/mini-llvm/mc/Module.h",
        "include/mini-llvm/mc/Operand.h",
        "include/mini-llvm/mc/Statement.h",
        "include/mini-llvm/mc/StringDirective.h",
        "include/mini-llvm/mc/Symbol.h",
        "include/mini-llvm/mc/ZeroDirective.h",
        "include/mini-llvm/mir/BasicBlock.h",
        "include/mini-llvm/mir/BasicBlockBuilder.h",
        "include/mini-llvm/mir/BasicBlockOperand.h",
        "include/mini-llvm/mir/Condition.h",
        "include/mini-llvm/mir/Constant.h",
        "include/mini-llvm/mir/Constant/I16ArrayConstant.h",
        "include/mini-llvm/mir/Constant/I16Constant.h",
        "include/mini-llvm/mir/Constant/I32ArrayConstant.h",
        "include/mini-llvm/mir/Constant/I32Constant.h",
        "include/mini-llvm/mir/Constant/I64ArrayConstant.h",
        "include/mini-llvm/mir/Constant/I64Constant.h",
        "include/mini-llvm/mir/Constant/I8ArrayConstant.h",
        "include/mini-llvm/mir/Constant/I8Constant.h",
        "include/mini-llvm/mir/Constant/PtrArrayConstant.h",
        "include/mini-llvm/mir/Constant/PtrConstant.h",
        "include/mini-llvm/mir/Constant/ZeroConstant.h",
        "include/mini-llvm/mir/ConstantVisitor.h",
        "include/mini-llvm/mir/FormatExtensionMode.h",
        "include/mini-llvm/mir/FormatPrecision.h",
        "include/mini-llvm/mir/Function.h",
        "include/mini-llvm/mir/FunctionOperand.h",
        "include/mini-llvm/mir/GlobalValue.h",
        "include/mini-llvm/mir/GlobalValueOperand.h",
        "include/mini-llvm/mir/GlobalVar.h",
        "include/mini-llvm/mir/Immediate.h",
        "include/mini-llvm/mir/ImmediateOperand.h",
        "include/mini-llvm/mir/Instruction.h",
        "include/mini-llvm/mir/Instruction/Add.h",
        "include/mini-llvm/mir/Instruction/AddI.h",
        "include/mini-llvm/mir/Instruction/And.h",
        "include/mini-llvm/mir/Instruction/AndI.h",
        "include/mini-llvm/mir/Instruction/BinaryOperator.h",
        "include/mini-llvm/mir/Instruction/BinaryOperatorI.h",
        "include/mini-llvm/mir/Instruction/Br.h",
        "include/mini-llvm/mir/Instruction/Cmp.h",
        "include/mini-llvm/mir/Instruction/CmpBr.h",
        "include/mini-llvm/mir/Instruction/CmpSet.h",
        "include/mini-llvm/mir/Instruction/CmpZ.h",
        "include/mini-llvm/mir/Instruction/CmpZBr.h",
        "include/mini-llvm/mir/Instruction/CmpZSet.h",
        "include/mini-llvm/mir/Instruction/CondBr.h",
        "include/mini-llvm/mir/Instruction/CondSet.h",
        "include/mini-llvm/mir/Instruction/FAdd.h",
        "include/mini-llvm/mir/Instruction/FBinaryOperator.h",
        "include/mini-llvm/mir/Instruction/FCmp.h",
        "include/mini-llvm/mir/Instruction/FCmpSet.h",
        "include/mini-llvm/mir/Instruction/FCvt.h",
        "include/mini-llvm/mir/Instruction/FCvtFS.h",
        "include/mini-llvm/mir/Instruction/FCvtFU.h",
        "include/mini-llvm/mir/Instruction/FCvtSF.h",
        "include/mini-llvm/mir/Instruction/FCvtUF.h",
        "include/mini-llvm/mir/Instruction/FDiv.h",
        "include/mini-llvm/mir/Instruction/FLoad.h",
        "include/mini-llvm/mir/Instruction/FMov.h",
        "include/mini-llvm/mir/Instruction/FMovFI.h",
        "include/mini-llvm/mir/Instruction/FMovIF.h",
        "include/mini-llvm/mir/Instruction/FMul.h",
        "include/mini-llvm/mir/Instruction/FNeg.h",
        "include/mini-llvm/mir/Instruction/FStore.h",
        "include/mini-llvm/mir/Instruction/FSub.h",
        "include/mini-llvm/mir/Instruction/FUnaryOperator.h",
        "include/mini-llvm/mir/Instruction/FakeUse.h",
        "include/mini-llvm/mir/Instruction/LA.h",
        "include/mini-llvm/mir/Instruction/LI.h",
        "include/mini-llvm/mir/Instruction/Load.h",
        "include/mini-llvm/mir/Instruction/Marker.h",
        "include/mini-llvm/mir/Instruction/Mov.h",
        "include/mini-llvm/mir/Instruction/Mul.h",
        "include/mini-llvm/mir/Instruction/Neg.h",
        "include/mini-llvm/mir/Instruction/Not.h",
        "include/mini-llvm/mir/Instruction/Or.h",
        "include/mini-llvm/mir/Instruction/OrI.h",
        "include/mini-llvm/mir/Instruction/SDiv.h",
        "include/mini-llvm/mir/Instruction/SExt.h",
        "include/mini-llvm/mir/Instruction/SHL.h",
        "include/mini-llvm/mir/Instruction/SHLI.h",
        "include/mini-llvm/mir/Instruction/SHRA.h",
        "include/mini-llvm/mir/Instruction/SHRAI.h",
        "include/mini-llvm/mir/Instruction/SHRL.h",
        "include/mini-llvm/mir/Instruction/SHRLI.h",
        "include/mini-llvm/mir/Instruction/SRem.h",
        "include/mini-llvm/mir/Instruction/Store.h",
        "include/mini-llvm/mir/Instruction/Sub.h",
        "include/mini-llvm/mir/Instruction/SubI.h",
        "include/mini-llvm/mir/Instruction/Terminator.h",
        "include/mini-llvm/mir/Instruction/UDiv.h",
        "include/mini-llvm/mir/Instruction/URem.h",
        "include/mini-llvm/mir/Instruction/UnaryOperator.h",
        "include/mini-llvm/mir/Instruction/Xor.h",
        "include/mini-llvm/mir/Instruction/XorI.h",
        "include/mini-llvm/mir/InstructionVisitor.h",
        "include/mini-llvm/mir/IntegerImmediate.h",
        "include/mini-llvm/mir/MemoryOperand.h",
        "include/mini-llvm/mir/Module.h",
        "include/mini-llvm/mir/PhysicalRegister.h",
        "include/mini-llvm/mir/Register.h",
        "include/mini-llvm/mir/RegisterClass.h",
        "include/mini-llvm/mir/RegisterOperand.h",
        "include/mini-llvm/mir/StackFrame.h",
        "include/mini-llvm/mir/StackOffsetImmediate.h",
        "include/mini-llvm/mir/StackSlot.h",
        "include/mini-llvm/mir/VirtualRegister.h",
        "include/mini-llvm/opt/ir/FunctionAnalysis.h",
        "include/mini-llvm/opt/ir/FunctionTransform.h",
        "include/mini-llvm/opt/ir/ModuleAnalysis.h",
        "include/mini-llvm/opt/ir/ModuleTransform.h",
        "include/mini-llvm/opt/ir/PassManager.h",
        "include/mini-llvm/opt/ir/passes/AlgebraicSimplification.h",
        "include/mini-llvm/opt/ir/passes/AliasAnalysis.h",
        "include/mini-llvm/opt/ir/passes/ArrayFlattening.h",
        "include/mini-llvm/opt/ir/passes/AttributeDeduction.h",
        "include/mini-llvm/opt/ir/passes/BasicBlockMerging.h",
        "include/mini-llvm/opt/ir/passes/BranchSimplification.h",
        "include/mini-llvm/opt/ir/passes/ConstantFolding.h",
        "include/mini-llvm/opt/ir/passes/DeadCodeElimination.h",
        "include/mini-llvm/opt/ir/passes/DeadStoreElimination.h",
        "include/mini-llvm/opt/ir/passes/DominatorTreeAnalysis.h",
        "include/mini-llvm/opt/ir/passes/FunctionInlining.h",
        "include/mini-llvm/opt/ir/passes/GlobalCodeMotion.h",
        "include/mini-llvm/opt/ir/passes/GlobalDeadCodeElimination.h",
        "include/mini-llvm/opt/ir/passes/GlobalValueNumbering.h",
        "include/mini-llvm/opt/ir/passes/InstructionCombining.h",
        "include/mini-llvm/opt/ir/passes/JumpThreading.h",
        "include/mini-llvm/opt/ir/passes/LoopTreeAnalysis.h",
        "include/mini-llvm/opt/ir/passes/Mem2Reg.h",
        "include/mini-llvm/opt/ir/passes/PoisonPropagation.h",
        "include/mini-llvm/opt/ir/passes/RedundantLoadElimination.h",
        "include/mini-llvm/opt/ir/passes/StrengthReduction.h",
        "include/mini-llvm/opt/ir/passes/TailCallElimination.h",
        "include/mini-llvm/opt/ir/passes/TailDuplication.h",
        "include/mini-llvm/opt/ir/passes/UnreachableBlockElimination.h",
        "include/mini-llvm/opt/mc/GlobalValueTransform.h",
        "include/mini-llvm/opt/mc/ModuleTransform.h",
        "include/mini-llvm/opt/mir/BasicBlockAnalysis.h",
        "include/mini-llvm/opt/mir/BasicBlockTransform.h",
        "include/mini-llvm/opt/mir/FunctionAnalysis.h",
        "include/mini-llvm/opt/mir/FunctionTransform.h",
        "include/mini-llvm/opt/mir/ModuleAnalysis.h",
        "include/mini-llvm/opt/mir/ModuleTransform.h",
        "include/mini-llvm/opt/mir/passes/BasicBlockMerging.h",
        "include/mini-llvm/opt/mir/passes/BasicBlockReordering.h",
        "include/mini-llvm/opt/mir/passes/BranchPredictionAnalysis.h",
        "include/mini-llvm/opt/mir/passes/CopyPropagation.h",
        "include/mini-llvm/opt/mir/passes/DeadCodeElimination.h",
        "include/mini-llvm/opt/mir/passes/JumpThreading.h",
        "include/mini-llvm/opt/mir/passes/LiveVariableAnalysis.h",
        "include/mini-llvm/opt/mir/passes/NullOperationElimination.h",
        "include/mini-llvm/opt/mir/passes/RegisterReuse.h",
        "include/mini-llvm/opt/mir/passes/StackOffsetEvaluation.h",
        "include/mini-llvm/opt/mir/passes/TailDuplication.h",
        "include/mini-llvm/opt/mir/passes/UnreachableBlockElimination.h",
        "include/mini-llvm/opt/mir/passes/ZeroRegisterReplacement.h",
        "include/mini-llvm/targets/riscv/RISCVBackendDriver.h",
        "include/mini-llvm/targets/riscv/codegen/RISCVMCGen.h",
        "include/mini-llvm/targets/riscv/codegen/RISCVMIRGen.h",
        "include/mini-llvm/targets/riscv/mc/RISCVAddress.h",
        "include/mini-llvm/targets/riscv/mc/RISCVAddressDirective.h",
        "include/mini-llvm/targets/riscv/mc/RISCVAddressOperand.h",
        "include/mini-llvm/targets/riscv/mc/RISCVDataDirective.h",
        "include/mini-llvm/targets/riscv/mc/RISCVImmediateOperand.h",
        "include/mini-llvm/targets/riscv/mc/RISCVInstruction.h",
        "include/mini-llvm/targets/riscv/mc/RISCVMemoryOperand.h",
        "include/mini-llvm/targets/riscv/mc/RISCVOperation.h",
        "include/mini-llvm/targets/riscv/mc/RISCVRegister.h",
        "include/mini-llvm/targets/riscv/mc/RISCVRegisterOperand.h",
        "include/mini-llvm/targets/riscv/mir/Instruction/RISCVCall.h",
        "include/mini-llvm/targets/riscv/mir/Instruction/RISCVJALR.h",
        "include/mini-llvm/targets/riscv/mir/Instruction/RISCVRet.h",
        "include/mini-llvm/targets/riscv/mir/RISCVInstructionVisitor.h",
        "include/mini-llvm/targets/riscv/mir/RISCVRegister.h",
        "include/mini-llvm/targets/riscv/opt/mc/RISCVPassManager.h",
        "include/mini-llvm/targets/riscv/opt/mc/passes/RISCVFallthrough.h",
        "include/mini-llvm/targets/riscv/opt/mc/passes/RISCVUnusedLabelElimination.h",
        "include/mini-llvm/targets/riscv/opt/mir/RISCVPassManager.h",
        "include/mini-llvm/targets/riscv/opt/mir/passes/RISCVConstantPropagation.h",
        "include/mini-llvm/utils/ArrowProxy.h",
        "include/mini-llvm/utils/Ascii.h",
        "include/mini-llvm/utils/BigInteger.h",
        "include/mini-llvm/utils/CommandLineParser.h",
        "include/mini-llvm/utils/Compiler.h",
        "include/mini-llvm/utils/Dot.h",
        "include/mini-llvm/utils/ErrorCode.h",
        "include/mini-llvm/utils/Expected.h",
        "include/mini-llvm/utils/FileHandle.h",
        "include/mini-llvm/utils/FunctionRef.h",
        "include/mini-llvm/utils/HashCombine.h",
        "include/mini-llvm/utils/HashMap.h",
        "include/mini-llvm/utils/IO.h",
        "include/mini-llvm/utils/IndirectIterator.h",
        "include/mini-llvm/utils/Matrix.h",
        "include/mini-llvm/utils/Memory.h",
        "include/mini-llvm/utils/OptionalRef.h",
        "include/mini-llvm/utils/PCG32.h",
        "include/mini-llvm/utils/Path.h",
        "include/mini-llvm/utils/ProcessorDetection.h",
        "include/mini-llvm/utils/SequenceOps.h",
        "include/mini-llvm/utils/SetOps.h",
        "include/mini-llvm/utils/StringJoiner.h",
        "include/mini-llvm/utils/Strings.h",
        "include/mini-llvm/utils/SystemError.h",
        "include/mini-llvm/utils/SystemString.h",
        "include/mini-llvm/utils/Unicode.h",
        "include/mini-llvm/utils/Windows.h",
    ],
    copts = select({
        ":shared": [
            "-fvisibility=hidden",
            "-fvisibility-inlines-hidden",
        ],
        "//conditions:default": [],
    }),
    defines = select({
        ":shared": ["MINI_LLVM_SHARED"],
        "//conditions:default": [],
    }),
    linkstatic = select({
        ":shared": False,
        "//conditions:default": True,
    }),
    local_defines = select({
        ":shared": ["MINI_LLVM_EXPORTS"],
        "//conditions:default": [],
    }),
    strip_include_prefix = "include",
    textual_hdrs = [
        "include/mini-llvm/ir_reader/TokenKind.def",
        "include/mini-llvm/mir/Condition.def",
        "include/mini-llvm/targets/riscv/target.def",
        "include/mini-llvm/utils/ErrorCode.def",
    ],
)
