module(
    name = "mini-llvm",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_fuzzing", version = "0.6.0")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "googletest")
local_path_override(
    module_name = "googletest",
    path = "third_party/googletest",
)
